tests/checker/diagnostics/0061_core_plus_bool_06.ml.infer.expected
File "0061_core_plus_bool_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0061_core_plus_bool_06 is not a valid module name.

File "0061_core_plus_bool_06.ml", line 2, characters 13-17:
2 | let _ = (1 + true, 5)
                 ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
