tests/checker/diagnostics/0061_core_plus_bool_06.ml
let ( + ) (x : int) (y : int) : int = x
let _ = (1 + true, 5)
